# algorithmic-trader

./: .dockerignore  .env.docker.template  Dockerfile  Dockerfile.ui  Makefile  README.md  README_NEW.md  README_OLD.md  demo-docker-compose.yml  deploy-advanced.sh  deploy.sh  docker-compose.yml  docker-setup.sh  docker-test.sh  launch_advanced.py  main.py  pyproject.toml  requirements-ui.txt  requirements.txt
analytics/: performance.py
api/: endpoints.py
app/docs/: execution.md
app/strategy/docs/: Intraday Time Segments and Capital Buckets.md
apps/analyzer/: __init__.py  classify_intraday.py  classify_multiday.py  cli.py  pipeline.py
apps/backtest/: __init__.py  cli.py
apps/backtesting/: __init__.py  cli.py  data_loader.py  metrics.py  pipeline.py  simulator.py
apps/execution/: __init__.py  brokers.py  cli.py  orders.py  pipeline.py  portfolio.py
apps/screener/: __init__.py  artifacts.py  cli.py  features.py  filters.py  pipeline.py  ranking.py
apps/screener/providers/: __init__.py  base.py  yahoo.py
apps/strategy/: __init__.py  allocators.py  cli.py  pipeline.py  signals.py
apps/ui/: __init__.py  cli.py  dashboard.py
config/: .env.example  logging.yaml  strategy.yaml
demo/: DOCKER_DEMO_GUIDE.md  start-demo.sh  stop-demo.sh  test-analytics.sh  test-api.sh  test-complete.sh  test-portfolio.sh
demo/data/: demo-config.json  sample_prices.csv
docs/ai-ideation/: agent.md  design.md  future-ideation.md  integration.md  planning.md  strategy.md  streamlit-ui.md  testing.md
docs/phase-updates/: DEPLOYMENT_COMPLETE.md  MICROSERVICES_SUCCESS.md  PERFORMANCE_OPTIMIZATION_SUCCESS.md  PHASE_5_COMPLETE.md  PHASE_7_ADVANCED_FEATURES.md  PROJECT_STATUS.md
docs/strategy/: Intraday Patterns.md  Stock Movement Patterns and Trading Strategies.md
docs/summary-guides/: DEMO_SUMMARY.md  DOCKER_GUIDE.md  MICROSERVICES_ARCHITECTURE.md  PROJECT_SUMMARY.md  TESTING_DEBUGGING_GUIDE.md
infra/postgres/: init.sql
integration/: __init__.py  master_pipeline.py
k8s/: 00-namespace.yaml  01-trading-engine.yaml  02-dashboard.yaml  03-databases.yaml
microservices/: core-optimized.yml  core.yml  fast-startup.sh  integration-report.json
microservices/core-service/: Dockerfile  Dockerfile.optimized  app.py  models.py  requirements.txt
microservices/market-service/: Dockerfile  Dockerfile.optimized  app.py  requirements.txt
microservices/test-scripts/: test-integration.sh  test-service.sh
monitoring/: alert_rules.yml  dashboard.py  prometheus.yml  system.py
monitoring/templates/: dashboard.html
